--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sail": "^1.46",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
+        "nunomaduro/phpinsights": "^2.13",
         "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
@@ -63,6 +64,7 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
         }
